<resources>
    <string name="app_name">archwizacja-sms</string>

    <string name="action_settings">Settings</string>
    <string name="action_sms">SMS</string>
    <string name="action_mms">MMS</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_main">Main</string>
    <string name="thread_sms">Thread</string>

    <string name="reset_setting">X</string>
    <string name="default_setting">0</string>

    <string name="service_settings">com.jok.archwizacja_sms.service_settings</string>
    <string name="last_sms_backup">sms_backup</string>
    <string name="last_contacts_backup">contacts_backup</string>
    <string name="time_period">time</string>
    <string name="time_period_second">seconds</string>
    <string name="time_period_minute">minutes</string>
    <string name="time_period_hour">hours</string>
    <string name="time_period_day">days</string>
    <string name="time_period_week">weeks</string>
    <string name="time_period_month">months</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="Save">Save</string>


</resources>
