<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/info"
                android:id="@+id/info"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_period_second"
                android:id="@+id/seconds"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="2"
                android:text="@string/default_setting"
                android:id="@+id/edit_seconds"
                android:layout_weight="1" />

            <Button
                android:layout_width="@dimen/x_size"
                android:layout_height="@dimen/x_size"
                android:text="@string/reset_setting"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:onClick="onClick"
                android:id="@+id/button_seconds" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_height" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_period_minute"
                android:id="@+id/minutes"
                android:layout_below="@+id/seconds"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="2"
                android:text="@string/default_setting"
                android:id="@+id/edit_minutes"
                android:layout_weight="1" />

            <Button
                android:layout_width="@dimen/x_size"
                android:layout_height="@dimen/x_size"
                android:text="@string/reset_setting"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:onClick="onClick"
                android:id="@+id/button_minutes" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_height" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_period_hour"
                android:id="@+id/hours"
                android:layout_below="@+id/minutes"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="2"
                android:text="@string/default_setting"
                android:id="@+id/edit_hours"
                android:layout_weight="1" />

            <Button
                android:layout_width="@dimen/x_size"
                android:layout_height="@dimen/x_size"
                android:text="@string/reset_setting"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:onClick="onClick"
                android:id="@+id/button_hours" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_height" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_period_day"
                android:id="@+id/days"
                android:layout_below="@+id/hours"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="2"
                android:text="@string/default_setting"
                android:id="@+id/edit_days"
                android:layout_weight="1" />

            <Button
                android:layout_width="@dimen/x_size"
                android:layout_height="@dimen/x_size"
                android:text="@string/reset_setting"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:onClick="onClick"
                android:id="@+id/button_days" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_height" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_period_week"
                android:id="@+id/weeks"
                android:layout_below="@+id/days"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="2"
                android:text="@string/default_setting"
                android:id="@+id/edit_weeks"
                android:layout_weight="1" />

            <Button
                android:layout_width="@dimen/x_size"
                android:layout_height="@dimen/x_size"
                android:text="@string/reset_setting"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:onClick="onClick"
                android:id="@+id/button_weeks" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_height" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_period_month"
                android:id="@+id/months"
                android:layout_below="@+id/weeks"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="2"
                android:text="@string/default_setting"
                android:id="@+id/edit_months"
                android:layout_weight="1" />

            <Button
                android:layout_width="@dimen/x_size"
                android:layout_height="@dimen/x_size"
                android:text="@string/reset_setting"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:onClick="onClick"
                android:id="@+id/button_months" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                android:onClick="onClick"
                android:id="@+id/save" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
